# Parallelism_24942

./: README.md
1 task/: 1.cpp  CMakeLists.txt
2 task/integral/: integral.cpp
2 task/itteration/: itteration.cpp
2 task/matrix/: CMakeLists.txt  matrix_vector.cpp  text.txt
3 task/: CMakeLists.txt  omp_slae.cpp
